--- a/src/main/doc/并发编程完整版-02.md
+++ b/src/main/doc/并发编程完整版-02.md
@@ -15,8 +15,7 @@
 所以咱们需要一个线程池机制来管理这些内容。线程池的概念和连接池类似，都是在一个Java的集合中存储大量的线程对象，每次需要执行异步操作或者多线程操作时，不需要重新创建线程，直接从集合中拿到线程对象直接执行方法就可以了。
 
 JDK中就提供了线程池的类。
-
-在线程池构建初期，可以将任务提交到线程池中。会根据一定的机制来异步执行这个任务。
+据一定的机制来异步执行这个任务。
 
 * 可能任务直接被执行
 * 任务可以暂时被存储起来了。等到有空闲线程再来处理。
